@@ -1,0 +1,39 @@
+<!doctype html>
+<html lang="ja">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="Shigeru Kitazaki">
+    <title>Sandbox | {{ name }}</title>
+
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <!-- Custom styles -->
+    <style>
+      body {padding-top: 5rem;}
+    </style>
+
+    {% if use_css %}
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename=name+'.css') }}" />
+    {% endif %}
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+      <a class="navbar-brand" href="#">Sandbox</a>
+    </nav>
+
+    <main role="main" class="container">
+      <div class="main-contents">{% block content %}{% endblock %}</div>
+      <hr>
+    </main><!-- /main.container -->
+
+    <footer class="container">
+      <p>&copy; Shigeru Kitazaki</p>
+    </footer>
+    {% if use_js %}
+    <script type="text/javascript" src="{{ url_for('static', filename=name+'.js') }}"></script>
+    {% endif %}
+  </body>
+</html>
