@@ -1,3 +1,0 @@
-#wrapper {width:800px; text-align:center; margin:auto;}
-#contents {text-align:left; border-top:dotted 2px #333333;}
-
