@@ -1,6 +1,7 @@
 Jinja2 == 2.11.1
 psycopg2-binary == 2.8.4
 python-dotenv == 0.12.0
+Flask == 1.1.1
 
 # Install "sandboxlib" as editable
 -e ".[dev,test]"
